@@ -1,3 +1,9 @@
+2005-03-10  Vivek Jain  <jvivek@novell.com>
+	
+	**fixes bug #73139
+	* em-folder-tree.c (render_pixbuf):change the shared-folder icon names 
+	to the names in gnome-icon-theme 
+
 2005-03-03  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #66592
